--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "@aws-sdk/client-s3": "^3.714.0",
     "@aws-sdk/s3-request-presigner": "^3.714.0",
     "@prisma/client": "^6.18.0",
+    "blockhash-core": "^0.1.0",
     "dotenv": "^17.2.3",
-    "image-hash": "^6.0.0",
     "next": "16.0.1",
     "prisma": "^6.18.0",
     "react": "19.2.0",
