feat: add async job processing with BullMQ and multi-user support
- Add BullMQ + Redis for async image processing (verify + validate queues)
- Implement User model and user switching for multi-tenancy prototype
- Replace synchronous upload processing with distributed job queues
- Add worker process with graceful shutdown
- Add comprehensive implementation notes documentation

New commands: npm run worker, npm run db:seed
Dependencies: bullmq, ioredis, tsx

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,9 +21,26 @@ services:
     networks:
       - aragon-network
 
+  redis:
+    container_name: aragon-image-upload-redis
+    image: redis:7-alpine
+    restart: unless-stopped
+    ports:
+      - '${REDIS_PORT:-6379}:6379'
+    volumes:
+      - redis_data:/data
+    healthcheck:
+      test: ['CMD', 'redis-cli', 'ping']
+      interval: 5s
+      timeout: 3s
+      retries: 5
+    networks:
+      - aragon-network
+
 networks:
   aragon-network:
     driver: bridge
 
 volumes:
   db_data:
+  redis_data:
