--- a/env.example
+++ b/env.example
@@ -7,7 +7,13 @@ POSTGRES_PASSWORD=devpassword
 POSTGRES_DB=aragon_dev
 POSTGRES_PORT=5432
 
+# Redis Configuration (for BullMQ job queues)
+REDIS_HOST=localhost
+REDIS_PORT=6379
+
 # Cloudflare R2 Configuration (S3-compatible)
+# IMPORTANT: S3_ENDPOINT should NOT include the bucket name
+# The bucket name is specified separately in S3_BUCKET
 S3_ENDPOINT=https://<ACCOUNT_ID>.r2.cloudflarestorage.com
 S3_BUCKET=aragon-uploads
 AWS_ACCESS_KEY_ID=your_access_key_here
