--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev --webpack",
     "build": "next build --webpack",
     "start": "next start",
+    "worker": "tsx --env-file=.env workers/index.ts",
     "lint": "eslint",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -13,15 +14,22 @@
     "db:up": "docker compose up -d",
     "db:down": "docker compose down",
     "migrate": "npx prisma migrate dev",
+    "db:seed": "tsx prisma/seed.ts",
+    "db:reset": "npx prisma migrate reset && npm run db:seed",
     "db:studio": "npx prisma studio",
     "format": "prettier --write ."
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.714.0",
     "@aws-sdk/s3-request-presigner": "^3.714.0",
     "@prisma/client": "^6.18.0",
     "blockhash-core": "^0.1.0",
+    "bullmq": "^5.63.0",
     "dotenv": "^17.2.3",
+    "ioredis": "^5.8.2",
     "next": "16.0.1",
     "prisma": "^6.18.0",
     "react": "19.2.0",
@@ -43,6 +51,7 @@
     "tailwindcss": "^4",
     "ts-jest": "^29.4.5",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.6",
     "typescript": "^5"
   }
 }
